templates/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: example
